<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="action_settings">Settings</string>
	<string name="add_player">Add player</string>
	<string name="added">added</string>
    <string name="adjust_player_time">Add/subtract time for</string>
    <string name="adjust_time">Adjust player time</string>
    <string name="app_name">Board Game Timer</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_player_remove">Are you sure you want to remove</string>
    <string name="confirm_reset">Are you sure you want to reset the game?</string>
    <string name="done">Done</string>
    <string name="ended">ended.</string>
    <string name="game_paused">Game paused</string>
    <string name="hello_world">Hello world!</string>
    <string name="initial_round">Round 1</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="player">Player</string>
    <string name="player_default_name">Player 1</string>
    <string name="player_order_randomized">Player order randomized</string>
    <string name="player_order_reversed">Player order reversed</string>
    <string name="pass_turn">Pass turn</string>
    <string name="pause">Pause game</string>
    <string name="remove_player">Remove player</string>
    <string name="removed">removed</string>
    <string name="rename_player">Rename player</string>
    <string name="reverse_players">Reverse players</string>
    <string name="reset_game">Reset game</string>
    <string name="roundNo">Round</string>
    <string name="select_game_time_per_player">Select game time per player</string>
    <string name="set_game_time">Select game time</string>
    <string name="set_player_active">Activate player</string>
    <string name="shuffle_players">Shuffle players</string>
    <string name="start">Start</string>
    <string name="start_round">Start round</string>
    <string name="unpass">Unpass</string>
    <string name="zero_time">00:00</string>
</resources>
